--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,4 +7,13 @@
     .it-ce {
         @apply justify-items-center items-center
     }
+    .myShadow {
+        @apply shadow-[3px_3px_6px_6px_rgb(0,0,0,0.3),-3px_-3px_6px_6px_rgb(0,0,0,0.3)]
+    }
+    .myBottomShadow {
+        @apply shadow-[0px_3px_6px_6px_rgb(0,0,0,0.3)]
+    }
+    .myTopShadow {
+        @apply shadow-[0px_-3px_6px_6px_rgb(0,0,0,0.3)]
+    }
 }
