--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -15,6 +15,9 @@
     .it-ce {
         @apply justify-items-center items-center
     }
+    .active {
+        @apply px-6 py-3 bg-main rounded-xl text-white
+    }
     .myShadow {
         @apply shadow-[3px_3px_6px_6px_rgb(0,0,0,0.1),-3px_-3px_6px_6px_rgb(0,0,0,0.1)]
     }
