--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,7 +7,7 @@
     h3 ,label {
         @apply text-xl font-bold text-main
     }
-    input[name] , textarea , select {
+    input[name] , textarea[name] , select[name] {
         @apply border-2 border-main outline-main rounded-lg
     }
 }
@@ -22,9 +22,9 @@
         @apply shadow-[3px_3px_6px_6px_rgb(0,0,0,0.1),-3px_-3px_6px_6px_rgb(0,0,0,0.1)]
     }
     .myBottomShadow {
-        @apply shadow-[0px_3px_6px_6px_rgb(0,0,0,0.3)]
+        @apply shadow-[0px_3px_6px_6px_rgb(0,0,0,0.1)]
     }
     .myTopShadow {
-        @apply shadow-[0px_-3px_6px_6px_rgb(0,0,0,0.3)]
+        @apply shadow-[0px_-3px_6px_6px_rgb(0,0,0,0.1)]
     }
 }
