--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -15,6 +15,9 @@
     .it-ce {
         @apply justify-items-center items-center
     }
+    .co-ce {
+        @apply justify-center content-center
+    }
     .active {
         @apply px-6 py-3 bg-main rounded-xl text-white
     }
