--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -30,4 +30,19 @@
     .myTopShadow {
         @apply shadow-[0px_-3px_6px_6px_rgb(0,0,0,0.1)]
     }
+
 }
+    
+    @layer utilities {
+        /* Hide scrollbar for Chrome, Safari and Opera */
+        .my-hide-scrollbar::-webkit-scrollbar {
+            display: none;
+        }
+        /* Hide scrollbar for IE, Edge and Firefox */
+        .my-hide-scrollbar {
+            -ms-overflow-style: none;
+            /* IE and Edge */
+            scrollbar-width: none;
+            /* Firefox */
+        }
+    }
